--- a/public/admin.html
+++ b/public/admin.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
     />
     <style>
-      /* 使用原有的根變數 */
       :root {
         --primary-color: #2e7d32;
         --primary-light: #4caf50;
@@ -24,7 +23,6 @@
         --text-secondary: #666666;
       }
 
-      /* 管理者頁面特定樣式 */
       .admin-container {
         max-width: 1200px;
         margin: 0 auto;
@@ -63,10 +61,16 @@
         align-items: center;
         gap: 0.5rem;
         transition: all 0.3s ease;
-        position: fixed; /* 固定位置 */
-        top: 20px; /* 距離頂部 */
-        right: 20px; /* 距離右側 */
-        z-index: 1000; /* 確保在最上層 */
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1000;
+      }
+
+      .back-button:hover {
+        background: #555;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
 
       .download-btn {
@@ -89,13 +93,6 @@
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
       }
 
-      .back-button:hover {
-        background: #555;
-        transform: translateY(-2px);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      }
-
-      /* 在原有的 style 中添加 */
       .record-item {
         display: flex;
         justify-content: space-between;
@@ -105,14 +102,13 @@
       }
 
       .delete-btn {
+        padding: 0.5rem 1rem;
         background: #dc3545;
         color: white;
         border: none;
         border-radius: 4px;
-        padding: 0.5rem 1rem;
         cursor: pointer;
         transition: all 0.3s ease;
-        margin-left: 1rem;
       }
 
       .delete-btn:hover {
@@ -135,7 +131,7 @@
       .user-item {
         display: flex;
         align-items: center;
-        padding: 1rem;
+        padding: 1.5rem;
         border-bottom: 1px solid #eee;
         cursor: pointer;
         transition: background-color 0.3s;
@@ -146,19 +142,63 @@
       }
 
       .user-avatar {
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
         background: var(--primary-light);
         color: white;
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-right: 1rem;
+        margin-right: 1.5rem;
+        font-size: 1.2rem;
+        font-weight: bold;
       }
 
       .user-info {
         flex: 1;
+        cursor: pointer;
+      }
+
+      .user-info h3 {
+        margin-bottom: 0.5rem;
+        color: var(--text-primary);
+      }
+
+      .user-details {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 0.5rem;
+      }
+
+      .user-details p {
+        margin: 0.25rem 0;
+        color: var(--text-secondary);
+      }
+
+      .user-actions {
+        display: flex;
+        gap: 0.5rem;
+        align-items: flex-start;
+      }
+
+      .role-toggle-btn {
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        background: var(--primary-color);
+        color: white;
+      }
+
+      .role-toggle-btn.admin-role {
+        background: #ff9800;
+      }
+
+      .role-toggle-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
 
       .chart-container {
@@ -201,11 +241,6 @@
         margin-top: 1rem;
       }
 
-      .record-item {
-        padding: 1rem;
-        border-bottom: 1px solid #eee;
-      }
-
       .tooltip {
         position: relative;
         display: inline-block;
@@ -232,49 +267,14 @@
         visibility: visible;
         opacity: 1;
       }
-      .user-actions {
-        display: flex;
-        gap: 0.5rem;
-        align-items: center;
-      }
 
-      .role-toggle-btn {
-        padding: 0.5rem 1rem;
-        background: var(--primary-color);
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-      }
-
-      .role-toggle-btn:hover {
-        background: var(--primary-dark);
-        transform: translateY(-2px);
-      }
-
-      .delete-btn {
-        padding: 0.5rem;
-        background: #dc3545;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-      }
-
-      .delete-btn:hover {
-        background: #c82333;
-        transform: translateY(-2px);
-      }
-
-      .user-info {
-        cursor: pointer;
-        flex: 1;
-      }
       .topic-card {
         cursor: pointer;
         transition: transform 0.2s ease, box-shadow 0.2s ease;
+        margin-bottom: 1rem;
+        padding: 1rem;
+        background: #f8f9fa;
+        border-radius: 8px;
       }
 
       .topic-card:hover {
@@ -348,7 +348,7 @@
     <!-- 用戶詳情模態框 -->
     <div class="modal" id="userModal">
       <div class="modal-content">
-        <span class="close-btn">&times;</span>
+        <span class="close-btn" onclick="closeUserModal()">&times;</span>
         <h2>用戶測驗記錄</h2>
         <div class="record-list" id="recordList"></div>
       </div>
@@ -929,6 +929,15 @@
       // 添加獨立的 goBack 函數
       function goBack() {
         window.history.back();
+      }
+
+      // 添加關閉用戶模態框函數
+      function closeUserModal() {
+        document.getElementById("userModal").style.display = "none";
+      }
+
+      function closeTopicModal() {
+        document.getElementById("topicModal").style.display = "none";
       }
     </script>
   </body>
