--- a/public/index.html
+++ b/public/index.html
@@ -1861,12 +1861,15 @@
               <div class="quiz-content">
                 <div class="comparison-card">
                   <div style="text-align: center; padding: 2rem 0;">
-                    <div style="font-size: 4rem; font-weight: bold; color: #2e7d32; margin-bottom: 1rem;">
-                      ${percentage}%
-                    </div>
-                    <div style="font-size: 1.2rem; color: #666;">
-                      答對題數：${score} / ${currentQuestions.length}
-                    </div>
+                      <div style="font-size: 1.2rem; color: #666; margin-bottom: 0.5rem;">
+                        完成測驗! 您的答題正確率為:
+                      </div>
+                      <div style="font-size: 4rem; font-weight: bold; color: #2e7d32; margin-bottom: 1rem;">
+                        ${percentage}%
+                      </div>
+                      <div style="font-size: 1.2rem; color: #666;">
+                        答對題數：${score} / ${currentQuestions.length}
+                      </div>
                   </div>
 
                   <div class="model-circles-container"></div>
