--- a/public/index.html
+++ b/public/index.html
@@ -1874,11 +1874,15 @@
 
                   <div class="model-circles-container"></div>
 
-                  <div class="footnote">
-                    * 數據來源：AI模型在${
-                      categoryType === "veterinary" ? "獸醫" : "農業"
-                    }圖像識別測驗中的平均表現
-                  </div>
+                    <div class="footnote">
+                    * 模型版本資訊：<br/>
+                      - GPT-4o: gpt-4o-2024-08-06<br/>
+                      - GPT-4o-mini: gpt-4o-mini-2024-07-18<br/>
+                      - Claude-3.5: claude-3-5-sonnet-20241022<br/>
+                      - Claude-3: claude-3-haiku-20240307<br/>
+                      - Gemini-2.0: gemini-2.0-flash-exp<br/>
+                      - Gemini-1.5: gemini-1.5-flash
+                    </div>
                 </div>
 
                 <div style="margin-top: 2rem;">
