--- a/public/index.html
+++ b/public/index.html
@@ -2015,6 +2015,10 @@
                 model.isUser
               );
             });
+            window.scrollTo({
+              top: 0,
+              behavior: "smooth", // 使用平滑滾動效果
+            });
           } else {
             // 桌面版布局
             const desktopStatsHtml = `
