--- a/public/index.html
+++ b/public/index.html
@@ -348,8 +348,28 @@
         background: white;
         padding: 1rem;
         box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-        text-align: center;
         z-index: 1000;
+      }
+
+      .quiz-footer .back-btn {
+        padding: 0.8rem 1.5rem;
+        background: var(--text-secondary);
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 0.9rem;
+        transition: all 0.3s ease;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        min-width: 140px;
+        justify-content: center;
+      }
+
+      .quiz-footer .back-btn:hover:not([disabled]) {
+        background: #555;
+        transform: translateY(-2px);
       }
 
       .back-btn {
@@ -973,6 +993,20 @@
           color: #2e7d32;
           font-weight: bold;
           margin: 0.5rem 0;
+        }
+
+        .quiz-footer {
+          padding: 0.8rem;
+        }
+
+        .quiz-footer .back-btn {
+          padding: 0.6rem 1rem;
+          font-size: 0.8rem;
+          min-width: 120px;
+        }
+
+        .quiz-content {
+          margin-bottom: 80px;
         }
       }
 
@@ -1791,34 +1825,41 @@
 
         let questionHtml = `<h2>${questionData.question}</h2>`;
 
-        // 如果是圖片題庫且有圖片路徑
         if (currentQuizFormat === "image" && questionData.imagePath) {
-          console.log("圖片資訊：", {
-            format: currentQuizFormat,
-            imagePath: questionData.imagePath,
-            questionData: questionData,
-          });
-
           questionHtml = `
-            <img
-              src="${questionData.imagePath}"
-              alt="題目圖片"
-              class="question-image"
-              onerror="console.error('圖片載入失敗，路徑:', '${questionData.imagePath}')"
-            >
-            <h2>${questionData.question}</h2>
-          `;
+                <img src="${questionData.imagePath}" alt="題目圖片" class="question-image">
+                <h2>${questionData.question}</h2>
+            `;
         }
 
-        // 設置題目內容
         container.innerHTML = `
-          ${questionHtml}
-          <div class="options">
-            <button class="option-btn" onclick="checkAnswer('A')">${questionData.answer_a}</button>
-            <button class="option-btn" onclick="checkAnswer('B')">${questionData.answer_b}</button>
-            <button class="option-btn" onclick="checkAnswer('C')">${questionData.answer_c}</button>
-            <button class="option-btn" onclick="checkAnswer('D')">${questionData.answer_d}</button>
-          </div>
+            ${questionHtml}
+            <div class="options">
+                <button class="option-btn" onclick="checkAnswer('A')">${questionData.answer_a}</button>
+                <button class="option-btn" onclick="checkAnswer('B')">${questionData.answer_b}</button>
+                <button class="option-btn" onclick="checkAnswer('C')">${questionData.answer_c}</button>
+                <button class="option-btn" onclick="checkAnswer('D')">${questionData.answer_d}</button>
+            </div>
+        `;
+
+        // 更新 quiz-footer
+        const footer = document.querySelector(".quiz-footer");
+        footer.innerHTML = `
+            <div style="display: flex; justify-content: space-between; width: 100%; gap: 1rem;">
+                <button class="back-btn" onclick="previousQuestion()" ${
+                  currentQuestion === 0 ? "disabled" : ""
+                } 
+                        style="${
+                          currentQuestion === 0
+                            ? "opacity: 0.5; cursor: not-allowed;"
+                            : ""
+                        }">
+                    <i class="fas fa-arrow-left"></i> 返回上一題
+                </button>
+                <button class="back-btn" onclick="showTopics()">
+                    <i class="fas fa-list"></i> 返回主題選擇
+                </button>
+            </div>
         `;
 
         updateProgress();
@@ -2575,6 +2616,20 @@
 
         // 顯示類別選擇容器
         document.getElementById("category-selection").style.display = "block";
+      }
+
+      function previousQuestion() {
+        if (currentQuestion > 0) {
+          currentQuestion--;
+          // 如果答題記錄存在，移除最後一個記錄
+          if (answerHistory.length > 0) {
+            const lastAnswer = answerHistory.pop();
+            if (lastAnswer.isCorrect) {
+              score--;
+            }
+          }
+          showQuestion();
+        }
       }
     </script>
   </body>
