--- a/public/index.html
+++ b/public/index.html
@@ -1008,6 +1008,16 @@
         .quiz-content {
           margin-bottom: 80px;
         }
+
+        .modal-content {
+          max-width: 95%;
+        }
+
+        .close-modal {
+          right: 15px;
+          top: 10px;
+          font-size: 30px;
+        }
       }
 
       @media (max-width: 480px) {
@@ -1278,6 +1288,59 @@
           width: 100%; /* 確保在移動設備上按鈕寬度為 100% */
           padding: 0.8rem;
         }
+      }
+
+      .question-image {
+        cursor: pointer;
+        transition: opacity 0.3s ease;
+      }
+
+      .question-image:hover {
+        opacity: 0.9;
+      }
+
+      .image-modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        padding: 20px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.9);
+        backdrop-filter: blur(5px);
+      }
+
+      .modal-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 90%;
+        max-height: 90vh;
+        object-fit: contain;
+        width: auto;
+        height: auto;
+      }
+
+      .close-modal {
+        position: fixed;
+        right: 25px;
+        top: 15px;
+        color: #f1f1f1;
+        font-size: 35px;
+        font-weight: bold;
+        cursor: pointer;
+        z-index: 1001;
+      }
+
+      .close-modal:hover,
+      .close-modal:focus {
+        color: #bbb;
+        text-decoration: none;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -1818,6 +1881,8 @@
         showQuestion();
       }
 
+      // 在頁面載入時初始化模態框
+      document.addEventListener("DOMContentLoaded", initializeImageModal);
       // 顯示題目
       function showQuestion() {
         const questionData = currentQuestions[currentQuestion];
@@ -1827,9 +1892,13 @@
 
         if (currentQuizFormat === "image" && questionData.imagePath) {
           questionHtml = `
-                <img src="${questionData.imagePath}" alt="題目圖片" class="question-image">
-                <h2>${questionData.question}</h2>
-            `;
+            <img src="${questionData.imagePath}" 
+                 alt="題目圖片" 
+                 class="question-image" 
+                 onclick="showImageModal(this.src)"
+            >
+            <h2>${questionData.question}</h2>
+          `;
         }
 
         container.innerHTML = `
@@ -2631,6 +2700,50 @@
           showQuestion();
         }
       }
+
+      // 初始化模態框功能
+      function initializeImageModal() {
+        const modal = document.getElementById("imageModal");
+        const modalImg = document.getElementById("modalImage");
+        const closeBtn = document.querySelector(".close-modal");
+
+        // 點擊關閉按鈕
+        closeBtn.onclick = function () {
+          modal.style.display = "none";
+          document.body.style.overflow = "auto"; // 恢復頁面滾動
+        };
+
+        // 點擊模態框外部區域關閉
+        modal.onclick = function (e) {
+          if (e.target === modal) {
+            modal.style.display = "none";
+            document.body.style.overflow = "auto";
+          }
+        };
+
+        // ESC 鍵關閉模態框
+        document.addEventListener("keydown", function (e) {
+          if (e.key === "Escape" && modal.style.display === "block") {
+            modal.style.display = "none";
+            document.body.style.overflow = "auto";
+          }
+        });
+      }
+
+      // 添加顯示模態框的函數
+      function showImageModal(imageSrc) {
+        const modal = document.getElementById("imageModal");
+        const modalImg = document.getElementById("modalImage");
+
+        modal.style.display = "block";
+        modalImg.src = imageSrc;
+        document.body.style.overflow = "hidden"; // 防止背景滾動
+      }
     </script>
+
+    <div id="imageModal" class="image-modal">
+      <span class="close-modal">&times;</span>
+      <img class="modal-content" id="modalImage" />
+    </div>
   </body>
 </html>
