--- a/public/index.html
+++ b/public/index.html
@@ -1309,8 +1309,9 @@
         width: 100%;
         height: 100%;
         overflow: auto;
-        background-color: rgba(0, 0, 0, 0.9);
-        backdrop-filter: blur(5px);
+        background-color: rgba(255, 255, 255, 0.6);
+        backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
       }
 
       .modal-content {
@@ -1323,24 +1324,40 @@
         object-fit: contain;
         width: auto;
         height: auto;
+        border-radius: 8px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
       }
 
       .close-modal {
         position: fixed;
         right: 25px;
         top: 15px;
-        color: #f1f1f1;
+        color: #2e7d32;
         font-size: 35px;
         font-weight: bold;
         cursor: pointer;
         z-index: 1001;
+        transition: color 0.3s ease;
       }
 
       .close-modal:hover,
       .close-modal:focus {
-        color: #bbb;
+        color: #1b5e20;
         text-decoration: none;
         cursor: pointer;
+      }
+
+      /* 移動端適配 */
+      @media (max-width: 768px) {
+        .modal-content {
+          max-width: 95%;
+        }
+
+        .close-modal {
+          right: 15px;
+          top: 10px;
+          font-size: 30px;
+        }
       }
     </style>
   </head>
